# playwright-with-fingerprints-python

./: .gitignore  README.md
local/: Makefile  mypy.ini  pyproject.toml  remote_cdp.py
remote/: .env.example  .eslintrc.cjs  .eslintrc.yml  .gitignore  .prettierrc.json  package.json
remote/runConfigurations/: remote-debug-all-no-logfile.run.xml
remote/src/: run_remote_pw.js
