[tool.poetry]
name = "Playwright connect to remote browser"
version = "0.1.0"
description = ""
authors = ["sergerdn <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^1.38.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
vcrpy = "^5.1.0"
pytest-playwright = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
