[tool.poetry]
name = "Playwright connect to remote browser"
version = "0.1.0"
description = ""
authors = ["sergerdn <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^1.39.0"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
pytest = "^7.4.2"
pytest-playwright = "^0.4.2"
vcrpy = "^5.1.0"
#types-requests = "^2.31.0.6"
black = "^23.10.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
